--- a/css/styles.css
+++ b/css/styles.css
@@ -88,13 +88,13 @@ button {
 }
 
 @media only screen and (min-width: 768px) {
-  .link.logo {
+  .header-nav>.link.logo {
     margin-right: 120px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
-  .link.logo {
+  .header-nav>.link.logo {
     margin-right: 76px;
   }
 }
@@ -157,7 +157,7 @@ button {
   line-height: calc(24 / 16);
   color: var(--main-color);
   letter-spacing: 0.02em;
-  padding: 24px 0;
+  /* padding: 24px 0; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -469,6 +469,7 @@ margin-bottom: 72px;
 
 @media screen and (min-width: 768px) {
   .logo-footer {
+    display: inline-block;
     text-align: start;
   }
 }
@@ -820,7 +821,13 @@ margin-bottom: 72px;
 .header-nav {
   display: flex;
   align-items: center;
-  margin-right: auto;
+    margin-right: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .header-nav {
+    margin-right: auto;
+  }
 }
 
 .header-adress-list {
@@ -983,7 +990,7 @@ margin-bottom: 72px;
 .customers-list {
   display: flex;
     flex-wrap: wrap;
-    column-gap: 16px;
+    column-gap: 24px;
     row-gap: 72px;
 }
 
@@ -1295,7 +1302,7 @@ outline: none;
 
 .mobile-menu .link {
   display: block;
-  padding: 10px;
+  /* padding: 10px; */
   /* color: #fff; */
   /* text-decoration: none; */
 }
@@ -1308,8 +1315,8 @@ outline: none;
 }
 
 .mobile-socials {
+  display: flex;
   justify-content: space-between;
-  gap: 56px;
 }
 
 .link.contacts-link.tel {
@@ -1320,6 +1327,12 @@ outline: none;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     padding: 0;
+}
+
+@media only screen and (max-width: 374px) { 
+  .link.contacts-link.tel {
+  font-size: 24px;
+  }
 }
 
 .link.contacts-link.mail {
