--- a/css/styles.css
+++ b/css/styles.css
@@ -987,11 +987,22 @@ margin-bottom: 72px;
   }
 }
 
-.customers-list {
-  display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 72px;
+.customers-list {  
+    display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      column-gap: 16px;
+      row-gap: 72px;
+      max-width: 550px;
+      margin: 0 auto;
+}
+
+@media only screen and (min-width: 1200px) {
+  .customers-list {
+    flex-wrap: nowrap;
+    gap: 24px;
+    max-width: none;
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -1008,19 +1019,19 @@ margin-bottom: 72px;
 }
 
 .customer {
-  width: calc((100% - 16px) / 2);
-    height: 88px;
+  flex-basis: calc((100% - 32px) / 2);
+  height: 88px;
 }
 
 @media only screen and (min-width: 768px) {
   .customer {
-        width: calc((100% - 48px) / 3);
+    flex-basis: calc((100% - 2 * 24px) / 3);
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1158px) {
   .customer {
-    width: calc((100% - 120px) / 6);
+    flex-basis: calc((100% - 5 * 24px) / 6);
   }
 }
 
