--- a/css/styles.css
+++ b/css/styles.css
@@ -711,11 +711,17 @@ margin-bottom: 72px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
   cursor: pointer;
-  padding: 12px 24px;  
+  padding: 8px 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 1200px) {
+  .filter {
+  padding: 12px 24px;
+  }
 }
 
 .filter:hover,
@@ -926,14 +932,30 @@ margin-bottom: 72px;
 
 .main-container-filter {
   display: flex;
-  gap: 24px;
-  justify-content: center;
-  margin-bottom: 72px;
+  flex-wrap: wrap;
+  gap: 16px 24px;
+  justify-content: start;
+    margin-bottom: 48px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .main-container-filter {
+    gap: 24px;
+    justify-content: center;
+    margin-bottom: 72px;
+  flex-wrap: nowrap;
+  }
 }
 
 .portfolio-container {
-  padding-top: 96px;
-  padding-bottom: 120px;
+  padding: 48px 0;
+}
+
+@media only screen and (min-width: 1200px) {
+  .portfolio-container {
+    padding-top: 96px;
+    padding-bottom: 120px;
+  }
 }
 
 .main-container-project {
